--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,100 @@
   variables:
     JNI_PATH: .
     CORENAME: vice_x64
+    EMUTYPE: x64
+
+.core-defs-x64sc:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_x64sc
+    EMUTYPE: x64sc
+
+.core-defs-x128:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_x128
+    EMUTYPE: x128
+
+.core-defs-xcbm2:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_xcbm2
+    EMUTYPE: xcbm2
+
+.core-defs-xcbm5x0:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_xcbm5x0
+    EMUTYPE: xcbm5x0
+
+.core-defs-xpet:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_xpet
+    EMUTYPE: xpet
+
+.core-defs-xplus4:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_xplus4
+    EMUTYPE: xplus4
+
+.core-defs-xscpu64:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_xscpu64
+    EMUTYPE: xscpu64
+
+.core-defs-xvic:
+  extends: .core-defs
+  variables:
+    CORENAME: vice_xvic
+    EMUTYPE: xvic
+
+.core-defs-android:
+  extends: .core-defs
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=x64
+
+.core-defs-x64sc-android:
+  extends: .core-defs-x64sc
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=x64sc
+
+.core-defs-x128-android:
+  extends: .core-defs-x128
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=x128
+
+.core-defs-xcbm2-android:
+  extends: .core-defs-xcbm2
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=xcbm2
+
+.core-defs-xcbm5x0-android:
+  extends: .core-defs-xcbm5x0
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=xcbm5x0
+
+.core-defs-xpet-android:
+  extends: .core-defs-xpet
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=xpet
+
+.core-defs-xplus4-android:
+  extends: .core-defs-xplus4
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=xplus4
+
+.core-defs-xscpu64-android:
+  extends: .core-defs-xscpu64
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=xscpu64
+
+.core-defs-xvic-android:
+  extends: .core-defs-xvic
+  variables:
+    PLATFORM_ARGS: APP_ABI=$ANDROID_ABI EMUTYPE=xvic
 
 include:
   - template: Jobs/Code-Quality.gitlab-ci.yml
@@ -28,6 +122,10 @@ stages:
   - build-static
   - test
 
+##############
+## vice_x64 ##
+##############
+
 # Desktop
 libretro-build-linux-x64:
   extends:
@@ -48,22 +146,22 @@ libretro-build-dingux-mips32:
 android-armeabi-v7a:
   extends:
     - .libretro-android-jni-armeabi-v7a
-    - .core-defs
+    - .core-defs-android
 
 android-arm64-v8a:
   extends:
     - .libretro-android-jni-arm64-v8a
-    - .core-defs
+    - .core-defs-android
 
 android-x86_64:
   extends:
     - .libretro-android-jni-x86_64
-    - .core-defs
-    
+    - .core-defs-android
+
 android-x86:
   extends:
     - .libretro-android-jni-x86
-    - .core-defs
+    - .core-defs-android
 
 # Static
 libretro-build-libnx-aarch64:
@@ -85,3 +183,459 @@ libretro-build-wii:
   extends:
     - .libretro-wii-static-retroarch-master
     - .core-defs
+
+################
+## vice_x64sc ##
+################
+
+# Desktop
+libretro-build-linux-x64-x64sc:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-x64sc
+
+libretro-build-windows-x64-x64sc:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-x64sc
+
+# Android
+android-armeabi-v7a-x64sc:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-x64sc-android
+
+android-arm64-v8a-x64sc:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-x64sc-android
+
+android-x86_64-x64sc:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-x64sc-android
+
+android-x86-x64sc:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-x64sc-android
+
+# Static
+libretro-build-libnx-aarch64-x64sc:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-x64sc
+
+libretro-build-vita-x64sc:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-x64sc
+
+libretro-build-ctr-x64sc:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-x64sc
+
+libretro-build-wii-x64sc:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-x64sc
+
+###############
+## vice_x128 ##
+###############
+
+# Desktop
+libretro-build-linux-x64-x128:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-x128
+
+libretro-build-windows-x64-x128:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-x128
+
+# Android
+android-armeabi-v7a-x128:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-x128-android
+
+android-arm64-v8a-x128:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-x128-android
+
+android-x86_64-x128:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-x128-android
+
+android-x86-x128:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-x128-android
+
+# Static
+libretro-build-libnx-aarch64-x128:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-x128
+
+libretro-build-vita-x128:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-x128
+
+libretro-build-ctr-x128:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-x128
+
+libretro-build-wii-x128:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-x128
+
+################
+## vice_xcbm2 ##
+################
+
+# Desktop
+libretro-build-linux-x64-xcbm2:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-xcbm2
+
+libretro-build-windows-x64-xcbm2:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-xcbm2
+
+# Android
+android-armeabi-v7a-xcbm2:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-xcbm2-android
+
+android-arm64-v8a-xcbm2:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-xcbm2-android
+
+android-x86_64-xcbm2:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-xcbm2-android
+
+android-x86-xcbm2:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-xcbm2-android
+
+# Static
+libretro-build-libnx-aarch64-xcbm2:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-xcbm2
+
+libretro-build-vita-xcbm2:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-xcbm2
+
+libretro-build-ctr-xcbm2:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-xcbm2
+
+libretro-build-wii-xcbm2:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-xcbm2
+
+##################
+## vice_xcbm5x0 ##
+##################
+
+# Desktop
+libretro-build-linux-x64-xcbm5x0:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-xcbm5x0
+
+libretro-build-windows-x64-xcbm5x0:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-xcbm5x0
+
+# Android
+android-armeabi-v7a-xcbm5x0:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-xcbm5x0-android
+
+android-arm64-v8a-xcbm5x0:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-xcbm5x0-android
+
+android-x86_64-xcbm5x0:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-xcbm5x0-android
+
+android-x86-xcbm5x0:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-xcbm5x0-android
+
+# Static
+libretro-build-libnx-aarch64-xcbm5x0:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-xcbm5x0
+
+libretro-build-vita-xcbm5x0:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-xcbm5x0
+
+libretro-build-ctr-xcbm5x0:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-xcbm5x0
+
+libretro-build-wii-xcbm5x0:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-xcbm5x0
+
+###############
+## vice_xpet ##
+###############
+
+# Desktop
+libretro-build-linux-x64-xpet:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-xpet
+
+libretro-build-windows-x64-xpet:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-xpet
+
+# Android
+android-armeabi-v7a-xpet:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-xpet-android
+
+android-arm64-v8a-xpet:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-xpet-android
+
+android-x86_64-xpet:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-xpet-android
+
+android-x86-xpet:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-xpet-android
+
+# Static
+libretro-build-libnx-aarch64-xpet:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-xpet
+
+libretro-build-vita-xpet:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-xpet
+
+libretro-build-ctr-xpet:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-xpet
+
+libretro-build-wii-xpet:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-xpet
+
+#################
+## vice_xplus4 ##
+#################
+
+# Desktop
+libretro-build-linux-x64-xplus4:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-xplus4
+
+libretro-build-windows-x64-xplus4:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-xplus4
+
+# Android
+android-armeabi-v7a-xplus4:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-xplus4-android
+
+android-arm64-v8a-xplus4:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-xplus4-android
+
+android-x86_64-xplus4:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-xplus4-android
+
+android-x86-xplus4:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-xplus4-android
+
+# Static
+libretro-build-libnx-aarch64-xplus4:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-xplus4
+
+libretro-build-vita-xplus4:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-xplus4
+
+libretro-build-ctr-xplus4:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-xplus4
+
+libretro-build-wii-xplus4:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-xplus4
+
+##################
+## vice_xscpu64 ##
+##################
+
+# Desktop
+libretro-build-linux-x64-xscpu64:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-xscpu64
+
+libretro-build-windows-x64-xscpu64:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-xscpu64
+
+# Android
+android-armeabi-v7a-xscpu64:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-xscpu64-android
+
+android-arm64-v8a-xscpu64:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-xscpu64-android
+
+android-x86_64-xscpu64:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-xscpu64-android
+
+android-x86-xscpu64:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-xscpu64-android
+
+# Static
+libretro-build-libnx-aarch64-xscpu64:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-xscpu64
+
+libretro-build-vita-xscpu64:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-xscpu64
+
+libretro-build-ctr-xscpu64:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-xscpu64
+
+libretro-build-wii-xscpu64:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-xscpu64
+
+###############
+## vice_xvic ##
+###############
+
+# Desktop
+libretro-build-linux-x64-xvic:
+  extends:
+    - .libretro-linux-x64-make-default
+    - .core-defs-xvic
+
+libretro-build-windows-x64-xvic:
+  extends:
+    - .libretro-windows-x64-mingw-make-default
+    - .core-defs-xvic
+
+# Android
+android-armeabi-v7a-xvic:
+  extends:
+    - .libretro-android-jni-armeabi-v7a
+    - .core-defs-xvic-android
+
+android-arm64-v8a-xvic:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs-xvic-android
+
+android-x86_64-xvic:
+  extends:
+    - .libretro-android-jni-x86_64
+    - .core-defs-xvic-android
+
+android-x86-xvic:
+  extends:
+    - .libretro-android-jni-x86
+    - .core-defs-xvic-android
+
+# Static
+libretro-build-libnx-aarch64-xvic:
+  extends:
+    - .libretro-libnx-static-retroarch-master
+    - .core-defs-xvic
+
+libretro-build-vita-xvic:
+  extends:
+    - .libretro-vita-static-retroarch-master
+    - .core-defs-xvic
+
+libretro-build-ctr-xvic:
+  extends:
+    - .libretro-ctr-static-retroarch-master
+    - .core-defs-xvic
+
+libretro-build-wii-xvic:
+  extends:
+    - .libretro-wii-static-retroarch-master
+    - .core-defs-xvic
